# medical-education-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: ship.md
agents/: base.py  challenger.md  debugger.md  explorer-alternatives.md  implementer.md  perf-reviewer.md  performance-optimizer.md  phase1_ingestion.py  phase2_embeddings.py  phase3_rag_api.py  phase4_guardrails_tests.py  phase5_databricks.py  researcher.md  reviewer.md  run_all.py  test-writer.md  verifier.md
commands/: gsd.md  ralf.md  ralph-loop.md  verify.md
data/processed/: eval_queries.parquet  indexed_eval_queries.parquet  test_queries.parquet
databricks/: db_01_delta_tables.py  db_02_mlflow_experiments.py  db_03_model_registry.py
docs/: IMPLEMENTATION_GUIDE.md  phase1_executive_report.md  phase2_executive_report.md  phase3_executive_report.md  phase4_executive_report.md  phase5_6_executive_report.md  retrieval_accuracy_changelog.md  test_questions.md
notebooks/: 01_data_ingestion.ipynb  02_embedding_comparison.ipynb  02b_build_vector_store.ipynb  04_export_for_databricks.ipynb  05_predictive_model.ipynb  05b_quality_predictor.ipynb  06_ab_pipeline_comparison.ipynb
scripts/: run_ab_evaluation.py  run_build_index.py  run_embedding_comparison.py  run_eval_queries.py  run_ingestion.py
src/api/: main.py  models.py  monitoring.py
src/embeddings/: recommender.py  vector_store.py
src/evaluation/: eval_harness.py
src/generation/: prompts.py  (+3 more)
tests/: conftest.py  test_api.py  test_guardrails.py  test_quality_predictor.py  test_retrieval.py  test_strategies.py
(+9 files in other folders)
