[project]
name = "medical-education-rag"
version = "0.1.0"
description = "Medical Education RAG Pipeline with ML — Interview Project"
requires-python = ">=3.11"
dependencies = [
    # Core ML & NLP
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # Vector store & search
    "pinecone>=5.0.0",
    "rank-bm25>=0.2.2",

    # LLM clients
    "groq>=0.9.0",
    "langchain>=0.2.0",
    "langchain-text-splitters>=0.2.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",

    # MLflow
    "mlflow>=2.14.0",

    # Data
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.20.0",
    "pyarrow>=16.0.0",

    # Visualization
    "matplotlib>=3.9.0",
    "shap>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
databricks = [
    "databricks-sdk>=0.28.0",
    "delta-spark>=3.2.0",
    "pyspark>=3.5.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
